# freetype2

./: meson.build  meson_options.txt
builds/unix/: ftconfig.h.in  ftconfig.in.patch
include/freetype/: ftmodapi.h
include/freetype/config/: ftoption.h.in  ftoption.h.patch
src/autofit/: afdummy.c
src/cid/: cidload.c
src/sfnt/: ttcmap.c
